<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{75e5defc-e010-45e4-a563-69e838af7978}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	fbMainloop	: fb_Conveyor;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbMainloop();

//Output to Virtual Machine
DataExchange.nAcceleration := fbMainloop.nAcceleration;
DataExchange.nDeceleration := fbMainloop.nDeceleration;
DataExchange.nDirection := fbMainloop.nDirection;
DataExchange.nVelocity := fbMainloop.nVelocity;
DataExchange.bAxis := fbMainloop.bAxis;
DataExchange.bHalt := fbMainloop.bHalt;


//Input from Virtual Machine
fbMainloop.bS1 := DataExchange.bS1;
fbMainloop.bS2 := DataExchange.bS2;
fbMainloop.bS3 := DataExchange.bS3;
fbMainloop.bInVelocity := DataExchange.bInVelocity;
]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="2" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="17" Count="4" />
      <LineId Id="27" Count="1" />
      <LineId Id="30" Count="2" />
      <LineId Id="29" Count="0" />
      <LineId Id="33" Count="1" />
      <LineId Id="36" Count="0" />
      <LineId Id="26" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>